tests/invalid/list_sort_set_element/main.py
def run_case() -> None:
    xs: list[set[int]] = [{1, 2}, {3, 4}]
    xs.sort()


if __name__ == "__main__":
    run_case()
